--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "a3"]
 	path = a3
 	url = https://github.com/ScribleSean/a3-SeanArackal
+[submodule "a4"]
+	path = a4
+	url = https://github.com/ScribleSean/a4-sean-arackal
